inclusão de + um botão, porém comentado ainda
botão na página inicial, para login direto

--- a/Software/web/index.xhtml
+++ b/Software/web/index.xhtml
@@ -84,6 +84,7 @@
                         <h3 class="wow bounceIn" data-wow-delay="0.9s">Olá! Bem-vindo ao</h3>
                         <h1 class="wow fadeInUp" data-wow-delay="1.6s">Baú da <br/>Felicidade</h1>
                         <a href="#overview" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">Acessar</a>
+                        <!--<a href="#newsletter" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">Entrar</a>-->
                     </div>
 
                 </div>
