--- a/Software/web/index.xhtml
+++ b/Software/web/index.xhtml
@@ -82,7 +82,7 @@
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
                         <h3 class="wow bounceIn" data-wow-delay="0.9s">Olá! Bem-vindo ao</h3>
-                        <h1 class="wow fadeInUp" data-wow-delay="1.6s">Baú da <br/>Felicidade</h1>
+                        <a href="#newsletter"><h1 class="wow fadeInUp" data-wow-delay="1.6s" style="color: white !important">Baú da <br/>Felicidade</h1></a>
                         <a href="#overview" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">Acessar</a>
                         <!--<a href="#newsletter" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">Entrar</a>-->
                     </div>
