--- a/Software/web/template.xhtml
+++ b/Software/web/template.xhtml
@@ -21,6 +21,9 @@
             <p:link outcome="index.jsf">
                 <p id="title-header">Baú da Felicidade</p>
             </p:link>
+            <div id="user-info">
+                <p:outputLabel value="Olá, #{beanLogin.login}!"></p:outputLabel>
+            </div>
         </div>
         <div id="menu">
             <h:form>
